--- a/radio_ae/radio_ae.tex
+++ b/radio_ae/radio_ae.tex
@@ -7,6 +7,7 @@
 \usepackage[numbib]{tocbibind}
 \usepackage{float}
 \usepackage{array}
+\usepackage{bm}
 
 \begin{document}
 
@@ -703,6 +704,97 @@ The earlier, \emph{model05} RADAE waveform has a PAPR of 9-10dB.  Based on our e
 \label{tab:papr_ssb}
 \end{table}
 
+\subsection{Optimal Timing}
+
+Coarse and fine timing is determined by maximising the correlation function at some time offset $t$ samples from \cite{freedv_low}:
+\begin{equation}
+D_t = \bm{r}^H\bm{p}
+\end{equation}
+where $\bm{p}$ is a $M$ sample vector of pilot samples:
+\begin{equation}
+p(n)=\sum_{c=1}^{Nc}P_c e^{j \omega_c n} \quad n=0,..,M
+\end{equation}
+and $\bm{r}$ is a vector of off air received pilot samples.  By insertion of the Cyclic Prefix we extend $r(n)$ to $N_{cp}+M$ samples, where any $M$ sample subset of $r_t(n)$:
+\begin{equation}
+r_t(n) = gp(n+t) \quad n=0,..,M, \quad -(N_{cp}-1) \le t \le 0
+\end{equation}
+is periodic in $M$ and $g$ is a complex scalar gain. The correlation as a function of the time offset $t$ is given by:
+\begin{equation}
+\label{eq:dt_time_offset}
+\begin{split}
+D_t &= \sum_{n=0}^{M-1} \sum_{c=1}^{Nc}r(n+t)p(n) \\
+    &= g \sum_{n=0}^{M-1} \sum_{c=1}^{Nc} |P_c|^2 e^{-j \omega_c t}
+\end{split}
+\end{equation}
+A peak in $|D_t|$ may occur for any $-(N_{cp}-1) \le t \le 0$, however by inspecting (\ref{eq:dt_time_offset}) we can see that for $t \ne 0$ the phase shift term results in a reduction in $|D_t|$.  Therefore the maxima of $|D_t|$ will tend to be located at the $t=0$ point (Figure \ref{fig:dt_max}).
+
+\begin{figure} [H]
+\caption{The maxima in $D_t$ will tend to be located in the last $M$ samples of the received sequence $r(n)$.}
+\vspace{5mm}
+\label{fig:dt_max}
+\begin{center}
+\begin{tikzpicture}[>=triangle 45,x=1.0cm,y=1.0cm]
+
+\draw (1,5) -- (5,5) -- (5,6) -- (1,6) -- (1,5);
+\draw (2,5) -- (2,6);
+\node[align=left] at (0.5,5.5) {$r(n)$};
+\node[align=center] at (1.5,5.5) {CP};
+\node[align=center] at (3.5,5.5) {Pilot Samples};
+\draw [<->] (1,6.5) -- (2,6.5); \draw [<->] (2,6.5) -- (5,6.5);
+\node[align=center] at (1.5,6.75) {$N_{cp}$};
+\node[align=center] at (3.5,6.75) {$M$};
+\draw [very thin,gray] (1,6.25) -- (1,6.75);
+\draw [very thin,gray] (5,6.25) -- (5,6.75);
+\draw [very thin,gray] (2,6.25) -- (2,6.75);
+
+\draw (2,3.5) -- (5,3.5) -- (5,4.5) -- (2,4.5) -- (2,3.5);
+\node[align=left] at (0.5,4) {$p(n)$};
+\node[align=center] at (3.5,4) {Pilot Samples};
+
+\draw [very thin,gray,->] (2,2.25) -- (2,3);
+\node[align=center] at (2,2) {$t=0$};
+
+\draw [<->] (1,4) -- (2,4);
+
+\end{tikzpicture}
+
+\end{center}
+\end{figure}
+
+Now consider the pilot sequence passing through a two path multipath channel simulation, where \emph{path1} is the fastest path to our receiver and \emph{path2} the slowest. The timing estimates $t$ that maximises $D_t$ will tend to point to the last $M$ samples of either \emph{path1} or \emph{path2}, depending on which path best maximnises $D_t$.  The two paths are time varying, but can be considered stationary over the timing estimator analysis window.  We denote the two possible timing estimates $t_1$ and $t_2$. Given $t_1$ or $t_2$, we wish to determine a $M$ sample window of samples starting at $t_{sam}$ for sampling the received OFDM symbol that minimise Inter symbol Interference (ISI).
+
+We set a timing reference at $t=0$ samples, the start of the received symbol for \emph{path1}.
+
+\begin{figure} [H]
+\caption{Multipath channel, sum of signals from two paths.}
+\vspace{5mm}
+\label{fig:dt_max}
+\begin{center}
+\begin{tikzpicture}[>=triangle 45,x=1.0cm,y=1.0cm]
+
+\draw [<->] (1,6.5) -- (2,6.5); \draw [<->] (2,6.5) -- (5,6.5);
+\node[align=center] at (1.5,6.75) {$N_{cp}$};
+\node[align=center] at (3.5,6.75) {$M$};
+\draw [very thin,gray] (1,6.25) -- (1,6.75);
+\draw [very thin,gray] (5,6.25) -- (5,6.75);
+\draw [very thin,gray] (2,6.25) -- (2,6.75);
+
+\draw (1,5) -- (5,5) -- (5,6) -- (1,6) -- (1,5);
+\draw (2,5) -- (2,6);
+\node[align=left] at (0.5,5.5) {path1};
+
+\draw (1.5,3.5) -- (5.5,3.5) -- (5.5,4.5) -- (1.5,4.5) -- (1.5,3.5);
+\draw (2.5,4.5) -- (2.5,4.5);
+\node[align=left] at (0.5,4) {path2};
+
+\draw [very thin,gray,->] (1,2.25) -- (1,3);
+\node[align=center] at (1,2) {$t=0$};
+
+
+\end{tikzpicture}
+
+\end{center}
+\end{figure}
 
 \section{Glossary}
 
